--- a/2025/day12_map_from_2125/day12_map_from_2125.qmd
+++ b/2025/day12_map_from_2125/day12_map_from_2125.qmd
@@ -1,5 +1,5 @@
 ---
-title: '2125'
+title: 'Map from 2125'
 subtitle: 'Welcome to #30DayMapChallenge 2025 day 12'
 date: '2025-11-12'
 image: 'day12_map_from_2125.png'
@@ -220,7 +220,9 @@ showtext_opts(dpi = 300)
 ```{r}
 base_map <- ggplot(world_proj) +
   geom_sf(aes(fill = popproj2125))+
-  scale_fill_gradient(low="white",high = "black")
+  scale_fill_gradient(low="white",
+                      high = "black", 
+                      na.value = "red")
 
 base_map
 ```
