--- a/2025/day4_my_data/day4_my_data.qmd
+++ b/2025/day4_my_data/day4_my_data.qmd
@@ -1,5 +1,5 @@
 ---
-title: 'Data'
+title: 'My Data'
 subtitle: 'Welcome to #30DayMapChallenge 2025 day 4'
 date: '2025-11-04'
 image: 'day4_my_data.png'
