--- a/2025/day13_10_minute_map/day13_10_minute_map.qmd
+++ b/2025/day13_10_minute_map/day13_10_minute_map.qmd
@@ -12,104 +12,8 @@ execute:
 
 ## Overview
 
-```{r}
-library(elevatr)
-library(terra)
-library(sf)
-library(ggplot2)
-
-# Define bounding box as sf polygon with CRS
-bbox <- st_as_sf(st_as_sfc(st_bbox(c(
-  xmin = 13.45,
-  xmax = 13.75,
-  ymin = 42.4,
-  ymax = 42.6
-), crs = 4326)))
-
-# Download elevation data (clip to bbox)
-dem <- get_elev_raster(
-  locations = bbox,
-  z = 10,
-  clip = "bbox"
-)
-
-# Convert to terra object
-dem_t <- rast(dem)
-
-# Create hillshade for visual effect
-hillshade <- shade(terrain(dem_t, "slope"), terrain(dem_t, "aspect"))
-
-# Plot with ggplot
-df <- as.data.frame(dem_t, xy = TRUE)
-names(df)[3] <- "elevation"
-
-ggplot(df) +
-  geom_raster(aes(x = x, y = y, fill = elevation)) +
-  scale_fill_viridis_c(option = "B") +
-  theme_void() +
-  coord_equal() +
-  labs(title = "Gran Sasso Elevation (10-minute map)",
-       caption = "Data source: elevatr / USGS")
-```
+No code for this map
 
 
-```{r}
-library(elevatr)
-library(terra)
-library(sf)
-library(ggplot2)
-library(osmdata)
 
-# Define bounding box as sf polygon with CRS
-bbox <- st_as_sf(st_as_sfc(st_bbox(c(
-  xmin = 13.45,
-  xmax = 13.75,
-  ymin = 42.4,
-  ymax = 42.6
-), crs = 4326)))
-
-# Get elevation data clipped to bbox
-dem <- get_elev_raster(locations = bbox, z = 10, clip = "bbox")
-dem_t <- rast(dem)
-
-# Convert to data frame for ggplot
-df <- as.data.frame(dem_t, xy = TRUE)
-names(df)[3] <- "elevation"
-
-# Get OpenStreetMap background features (roads, water, etc.)
-osm <- opq(bbox = st_bbox(bbox)) %>%
-  add_osm_feature(key = "highway") %>%
-  osmdata_sf()
-```
-
-
-```{r}
-# Plot
-ggplot() +
-  # Basemap (roads)
-  geom_sf(data = st_as_sf(ne_countries(scale = "medium", returnclass = "sf")),
-        color = "grey80", fill = NA) +
-  geom_sf(data = osm$osm_lines, 
-          color = "grey60", 
-          linewidth = 0.3) +
-  # Elevation raster
-  geom_raster(data = df, 
-              aes(x = x, y = y, fill = elevation), 
-              alpha = 0.7) +
-  scale_fill_viridis_c(option = "C", 
-                       name = "Elevation (m)") +
-  coord_sf(xlim = c(13.45, 13.75), 
-           ylim = c(42.4, 42.6), 
-           expand = FALSE) +
-  theme_void() +
-  labs(
-    title = "Gran Sasso Relief and Roads",
-    subtitle = "A 10-minute elevation map",
-    caption = "Data: USGS via {elevatr}, OpenStreetMap contributors")
-```
-
-```{r}
-library(ggspatial)
-annotation_map_tile(type = "osm", zoomin = 1)
-```
 
