--- a/2025/day13_10_minute_map/day13_10_minute_map.qmd
+++ b/2025/day13_10_minute_map/day13_10_minute_map.qmd
@@ -3,8 +3,8 @@ title: '10 Minute Map'
 subtitle: 'Welcome to #30DayMapChallenge 2025 day 13'
 date: '2025-11-13'
 image: 'day13_10_minute_map.png'
-image-alt: ''
-description: ''
+image-alt: 'Dalys due to Rabies 1990-2023'
+description: 'Dalys due to Rabies 1990-2023'
 output: html_document
 execute: 
    eval: false
