--- a/2025/day25_hexagons/day25_hexagons.qmd
+++ b/2025/day25_hexagons/day25_hexagons.qmd
@@ -60,6 +60,16 @@ hex_it <- st_intersection(cell_sf, italy)
 
 ```
 
+
+```{r}
+library(showtext)
+font_add_google(name = 'Roboto Condensed', 
+                family = 'Roboto Condensed')
+showtext_auto()
+showtext_opts(dpi = 300)
+```
+
+
 5. Plot hexagonal grid over Italy
 ```{r}
 ggplot() +
@@ -71,12 +81,17 @@ ggplot() +
     subtitle = "Approximate cell size: 200 km",
     caption = "#30DayMapChallenge 2025 | Day 25: Hexagons\nData source: Natural Earth | Map by Federica Gazzelloni"
   ) +
-  ggthemes::theme_map()
+  ggthemes::theme_map()+
+  theme(text=element_text(color="white",
+                          family="Roboto Condensed",face="bold"),
+        plot.title = element_text(size = 18),
+        plot.subtitle = element_text(size = 12),
+        plot.caption = element_text(hjust = 0.5))
 ```
 
 
 ```{r}
-ggsave("day24_places_and_their_names.png",
+ggsave("day25_hexagons.png",
        dpi = 320,
        width = 6,
        height = 4,
